--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,12 @@
 {
     "name": "__MSG_AppName__",
     "description": "__MSG_Description__",
-    "version": "2.1.3",
+    "version": "1.0.0",
     "default_locale": "en",
     "background": {
-        "scripts": ["./background/background.js"]
+        "scripts": [
+            "./background/background.js"
+        ]
     },
     "browser_action": {
         "default_popup": "./popup/popup.html",
@@ -19,9 +21,6 @@
             "suggested_key": {
                 "default": "Alt+Q"
             }
-        },
-        "change_language_setting": {
-            "description": "__MSG_ChangeLanguageSetting__"
         },
         "translate_selected": {
             "description": "__MSG_TranslateSelectedText__"
@@ -66,7 +65,10 @@
             "description": "__MSG_CancelPageTranslate__"
         }
     },
-    "web_accessible_resources": ["**/*.css", "youdao/*", "google/*"],
+    "web_accessible_resources": [
+        "**/*.css",
+        "google/*"
+    ],
     "icons": {
         "16": "icon/icon16.png",
         "48": "icon/icon48.png",
