--- a/src/manifest_firefox.json
+++ b/src/manifest_firefox.json
@@ -17,15 +17,27 @@
     ],
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "js": ["./content/display/display.js"],
-            "css": ["./content/display/style/display.css"]
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "./content/display/display.js"
+            ],
+            "css": [
+                "./content/display/style/display.css"
+            ]
         },
         {
-            "matches": ["<all_urls>"],
+            "matches": [
+                "<all_urls>"
+            ],
             "run_at": "document_start",
-            "js": ["./content/select/select.js"],
-            "css": ["./content/select/select.css"],
+            "js": [
+                "./content/select/select.js"
+            ],
+            "css": [
+                "./content/select/select.css"
+            ],
             "all_frames": true
         }
     ]
